k8s/httproute/invoice_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoice-route
  namespace: opslora-test-ns
  labels:
    app: invoices
spec:
  parentRefs:
  - name: opslora-gateway
    namespace: opslora-gateway-ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/v1/invoices
    backendRefs:
    - name: invoice-service
      port: 3000
